Fix assert when the stroke is cancelled in endStrokeCallback()

The patch basically deprecates cancelStrokeId() functionality, which
is now replaced with MutatedStrokeJobsInterface.

We can add new jobs via normal addJob() interface only before the stroke
is finished. After finishing, only addMutatedJob() is available.

BUG:415625
(cherry picked from commit f88c8b3529816be7f2be60528955e83483a22a1b)